hphp/test/quick/typedef_option_fail2.php.expectf
HipHop Fatal error: Argument 1 passed to bar2() must be an instance of blah, string given in %s on line 5
